// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Button matches snapshot 1`] = `
<DocumentFragment>
  <button
    class="c-jkTMls c-jkTMls-jsOpSy-color-primary c-jkTMls-sKeyg-size-md c-jkTMls-bDGmTT-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-ePLPad-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`components/Button renders all colors 1`] = `
<DocumentFragment>
  <button
    class="c-jkTMls c-jkTMls-jsOpSy-color-primary c-jkTMls-sKeyg-size-md c-jkTMls-bDGmTT-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-ePLPad-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jkTMls c-jkTMls-bmmCCE-color-secondary c-jkTMls-sKeyg-size-md c-jkTMls-bDGmTT-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-gCieqL-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jkTMls c-jkTMls-cbktrZ-color-success c-jkTMls-sKeyg-size-md c-jkTMls-bDGmTT-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-kkCveC-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jkTMls c-jkTMls-fWqKPQ-color-warning c-jkTMls-sKeyg-size-md c-jkTMls-bDGmTT-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-dQlwmf-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jkTMls c-jkTMls-cgBQIK-color-error c-jkTMls-sKeyg-size-md c-jkTMls-bDGmTT-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-bAuLhl-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`components/Button renders all sizes 1`] = `
<DocumentFragment>
  <button
    class="c-jkTMls c-jkTMls-jsOpSy-color-primary c-jkTMls-cmVdgU-size-sm c-jkTMls-bDGmTT-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-ePLPad-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jkTMls c-jkTMls-jsOpSy-color-primary c-jkTMls-sKeyg-size-md c-jkTMls-bDGmTT-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-ePLPad-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jkTMls c-jkTMls-jsOpSy-color-primary c-jkTMls-lXiLo-size-lg c-jkTMls-bDGmTT-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-ePLPad-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`components/Button renders all variants 1`] = `
<DocumentFragment>
  <button
    class="c-jkTMls c-jkTMls-jsOpSy-color-primary c-jkTMls-sKeyg-size-md c-jkTMls-bDGmTT-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-ePLPad-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jkTMls c-jkTMls-jsOpSy-color-primary c-jkTMls-sKeyg-size-md c-jkTMls-bDGmTT-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-fdQTW-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jkTMls c-jkTMls-jsOpSy-color-primary c-jkTMls-sKeyg-size-md c-jkTMls-bDGmTT-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-hSqWZv-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jkTMls c-jkTMls-jsOpSy-color-primary c-jkTMls-sKeyg-size-md c-jkTMls-bDGmTT-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-kJLEgH-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;
